# timer

./: .gitignore  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
src/: bot.py  timer.py  timer_bot.py
