[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "timer-bot"
version = "1.10"
authors = [
    { name = "Lionel Panhaleux", email = "lionel.panhaleux+timer@gmail.com" },
]
description = "Discord Timer Bot"
keywords = ["Discord", "timer"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
]
dependencies = ["discord-py-interactions>=5.14", "uvloop>=0.21"]

[project.optional-dependencies]
dev = ["black", "ruff", "zest.releaser[recommended]"]

[project.scripts]
timer-bot = "src.timer_bot:main"

[project.urls]
Repository = "https://github.com/lionel-panhaleux/timer-bot"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.zest-releaser]
create-wheel = true
