[metadata]
name = timer-bot
version = 1.7.dev0
author = lionelpx
author_email = lionel.panhaleux@gmail.com
url = http://github.com/lionel-panhaleux/timer-bot
description="Discord Timer Bot",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = discord game timer
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Other/Nonlisted Topic

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    discord-py-interactions>=4.4.1

[options.entry_points]
console_scripts =
    timer-bot = src.timer_bot:main

[options.extras_require]
dev =
    black
    doc8
    flake8
    pytest
    zest.releaser[recommended]

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[tool:pytest]
filterwarnings =
    ignore:.*format string will parse more strictly.*:DeprecationWarning

[zest.releaser]
create-wheel = yes
